{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 245,
  "lineage": "adb93d1c-34a1-a0bd-d71d-d27fd11ae222",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/loadBalancers/TestLoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/loadBalancers/TestLoadBalancer",
            "location": "westeurope",
            "name": "TestLoadBalancer",
            "resource_group_name": "myresourcegoup",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.publicip_lb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkInterfaces/myNIC1",
            "internal_domain_name_suffix": "yhe3raqaejaunlncow1lksuuee.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/publicIPAddresses/myPublicIP1",
                "subnet_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-8F-99-48",
            "name": "myNIC1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "myresourcegoup",
            "virtual_machine_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Compute/virtualMachines/vm1"
          },
          "dependencies": [
            "azurerm_public_ip.myterraformpublicip1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.myterraformsubnet1",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkInterfaces/myNIC2",
            "internal_domain_name_suffix": "yhe3raqaejaunlncow1lksuuee.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration2",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/publicIPAddresses/myPublicIP2",
                "subnet_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet2"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-8F-9A-D9",
            "name": "myNIC2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "myresourcegoup",
            "virtual_machine_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Compute/virtualMachines/vm2"
          },
          "dependencies": [
            "azurerm_public_ip.myterraformpublicip2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.myterraformsubnet2",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkInterfaces/myNIC1|/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup1",
            "network_interface_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkInterfaces/myNIC1",
            "network_security_group_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup1"
          },
          "dependencies": [
            "azurerm_network_interface.myterraformnic1",
            "azurerm_network_security_group.myterraformnsg1",
            "azurerm_public_ip.myterraformpublicip1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.myterraformsubnet1",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkInterfaces/myNIC2|/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup2",
            "network_interface_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkInterfaces/myNIC2",
            "network_security_group_id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup2"
          },
          "dependencies": [
            "azurerm_network_interface.myterraformnic2",
            "azurerm_network_security_group.myterraformnsg2",
            "azurerm_public_ip.myterraformpublicip2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.myterraformsubnet2",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup1",
            "location": "westeurope",
            "name": "myNetworkSecurityGroup1",
            "resource_group_name": "myresourcegoup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup2",
            "location": "westeurope",
            "name": "myNetworkSecurityGroup2",
            "resource_group_name": "myresourcegoup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/publicIPAddresses/myPublicIP1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.68.100.180",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "myPublicIP1",
            "resource_group_name": "myresourcegoup",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/publicIPAddresses/myPublicIP2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.68.103.80",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "myPublicIP2",
            "resource_group_name": "myresourcegoup",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.81.63.106",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIPForLB",
            "resource_group_name": "myresourcegoup",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet1",
            "name": "mySubnet1",
            "resource_group_name": "myresourcegoup",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet2",
            "name": "mySubnet2",
            "resource_group_name": "myresourcegoup",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "82d8c9c1-2200-4641-ada2-75b6b54a9424",
            "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "westeurope",
            "name": "myVnet",
            "resource_group_name": "myresourcegoup",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet1",
                "name": "mySubnet1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/7d5282a7-b9fc-4ebe-877a-f837b0827639/resourceGroups/myresourcegoup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet2",
                "name": "mySubnet2"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}